Fix z-index issue with ficebook widget_with_comment

--- a/web/less/frontend/_buttons.less
+++ b/web/less/frontend/_buttons.less
@@ -402,11 +402,14 @@ input[type="submit"].btn.btn-micro {
 	// overflow:hidden;
 	.size(22px, 55px);
 }
+.at300b:hover {
+	opacity: 1!important;
+}
 
 .addthis_button_tweet
 {
 	overflow:hidden;
-	.size(22px,56px);
+	.size(22px,58px);
 }
 
 .addthis_button_pinterest_pinit {
